--- a/newton.css
+++ b/newton.css
@@ -1,5 +1,5 @@
                     body {
-                        background-color: #fff;
+                        background-color: gainsboro;
                         color: #000;
                         margin-left: 1em;
                     }
@@ -11,6 +11,7 @@
                         margin-top: 24pt;
                         line-height: 120%;
                         margin-bottom: -24pt;
+                        color: rgb(100, 10, 10);
                     }
                     
                     h1 span {
