Imagen repitiendose en el fondo

--- a/newton.css
+++ b/newton.css
@@ -2,6 +2,7 @@
                         background-color: gainsboro;
                         color: #000;
                         margin-left: 1em;
+                        background-image: url("./images/isaac.png");
                     }
                     
                     h1 {
