--- a/newton.css
+++ b/newton.css
@@ -5,6 +5,7 @@
                         background-image: url("./images/isaac.png");
                         background-repeat: no-repeat;
                         background-attachment: fixed;
+                        background-position: right bottom;
                     }
                     
                     h1 {
