--- a/newton.css
+++ b/newton.css
@@ -2,24 +2,33 @@
                         background-color: gainsboro;
                         color: #000;
                         margin-left: 1em;
-                        background-image: url("./images/isaac.png");
-                        background-repeat: no-repeat;
-                        background-attachment: fixed;
-                        background-position: right bottom;
+                        width: 50%;
                     }
                     
-                    h1 {
+                    #descripcion {
+                        display: grid;
+                        grid-template-areas: "header header" "aside article";
+                        grid-template-columns: 1fr 3fr;
+                        gap: 20px;
+                    }
+                    
+                    header {
                         font-family: "Origins", "Palatino", "Book Antiqua", serif;
                         font-weight: bold;
                         font-size: 48pt;
                         margin-top: 24pt;
+                        text-align: center;
                         line-height: 120%;
                         margin-bottom: -24pt;
                         color: rgb(100, 10, 10);
+                        grid-column-start: 1;
+                        grid-column-end: 3;
+                        grid-row: 1;
                     }
                     
-                    h1 span {
-                        text-decoration: line-through
+                    article {
+                        grid-column: 2;
+                        grid-row: 2;
                     }
                     
                     p {
@@ -27,17 +36,23 @@
                         text-indent: 5em;
                         text-align: justify;
                         max-width: 25em;
-                        margin-left: 100px;
-                        margin-right: auto;
                     }
                     
-                    .intro {
+                    aside {
+                        background-image: url("./images/isaac.png");
+                        background-repeat: no-repeat;
+                        background-position: center top;
+                        grid-row: 2;
+                        margin: 15%;
+                    }
+                    
+                    #intro {
                         text-align: center;
                         font-style: italic;
                         color: #666;
                         text-indent: 0em;
                     }
                     
-                    p.intro:first-line {
+                    #intro:first-line {
                         font-variant: small-caps;
                     }
